--- a/src/components/Rightbar/Rightbar.css
+++ b/src/components/Rightbar/Rightbar.css
@@ -11,7 +11,7 @@
 .birthdayImg {
   width: 40px;
   height: 40px;
-  margin-right: 10px;
+  margin-right: 100px;
 }
 .birthdayText {
   font-weight: bold;
@@ -85,11 +85,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: in-between;
-}
-.rightbarFollowing{
+  }
+  .rightbarFollowing{
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin:0 20px 0 5px;
   cursor:pointer;
 }
 .rightbarFollowingImg{
