--- a/src/components/Topbar/Topbar.css
+++ b/src/components/Topbar/Topbar.css
@@ -19,6 +19,10 @@
   font-weight: bold;
   color: white;
   cursor: pointer;
+ 
+}
+.check{
+  text-decoration: none;
 }
 
 .topbarCenter {
@@ -94,3 +98,4 @@
   object-fit: cover;
   cursor: pointer;
 }
+
