--- a/src/components/Rightbar/Rightbar.css
+++ b/src/components/Rightbar/Rightbar.css
@@ -11,90 +11,103 @@
 .birthdayImg {
   width: 40px;
   height: 40px;
-  margin-right: 100px;
+  margin-right: 10px;
 }
 .birthdayText {
   font-weight: bold;
   font-size: 15px;
 }
 .rightAd {
-    width: 100%;
-    border-radius: 10px;
-    margin: 30px 0;
+  width: 100%;
+  border-radius: 10px;
+  margin: 30px 0;
 }
-.rightbarTitle{
-    margin-bottom: 20px;
+.rightbarTitle {
+  margin-bottom: 20px;
 }
-.rightbarFriendList{
-    padding: 0;
-    margin: 0;
-    list-style: none;
+.rightbarFriendList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
-.rightbarFriend{
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
+.rightbarFriend {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
 }
-.rightbarProfileImgContainer{
-    margin-right: 10px;
-    position: relative;
+.rightbarProfileImgContainer {
+  margin-right: 10px;
+  position: relative;
+}
 
+.rightbarProfileImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
 }
-
-.rightbarProfileImg{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
+.rightbarOnline {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: limegreen;
+  position: absolute;
+  top: -2px;
+  right: 0;
+  border: 2px solid white;
 }
-.rightbarOnline{
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: limegreen;
-    position: absolute;
-    top: -2px;
-    right: 0;
-    border: 2px solid white;
+.rightbarUsername {
+  font-weight: 500;
 }
-.rightbarUsername{
-    font-weight: 500;
-
-}
-.rightbarTitle{
+.rightbarTitle {
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
 }
-.rightbarInfo{
+.rightbarInfo {
   margin-bottom: 30px;
 }
-.rightbarInfoitem{
+.rightbarInfoitem {
   min-width: 10px;
 }
-.rightbarInfoKey{
+.rightbarInfoKey {
   font-weight: bold;
   margin-right: 15px;
   color: #555;
-
 }
-.rightbarInfoValue{
-    font-weight: 300;
+.rightbarInfoValue {
+  font-weight: 300;
 }
-.rightbarFollowings{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: in-between;
-  }
-  .rightbarFollowing{
+.rightbarFollowings {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: in-between;
+}
+.rightbarFollowing {
   display: flex;
   flex-direction: column;
-  margin:0 20px 0 5px;
-  cursor:pointer;
+  margin-bottom: 20px;
+  cursor: pointer;
 }
-.rightbarFollowingImg{
+.rightbarFollowingImg {
   width: 100px;
   height: 100px;
   object-fit: cover;
   border-radius: 5px;
+}
+.rightbarFollowButton {
+  margin: 30px 0 10px 0;
+  background-color: #1872f2;
+  border-radius: 5px;
+  color: white;
+  padding: 5px 10px;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  border: none;
+}
+.rightbarFollowButton:focus{
+  outline: none;
 }
