--- a/src/components/Share/Share.css
+++ b/src/components/Share/Share.css
@@ -1,6 +1,6 @@
 .share{
     widows: 100%;
-    height: 170px;
+ 
     border-radius: 10px;
     /* background-color: green; */
     -webkit-box-shadow:0px 1px 16px -8px rgba(0,0,0,0.68);
@@ -64,4 +64,21 @@
     cursor: pointer; 
     color: white;
     background-color: green;
+}
+.shareImgContainer{
+    padding:0 20px 10px 20px;
+    position: relative;
+}
+.shareImg{
+    width: 100%;
+    object-fit: cover;
+
+}
+.shareCancelImg{
+    position: absolute;
+    top: 0;
+    right: 20px;
+    cursor: pointer;
+    opacity: 70%;
+
 }
