--- a/src/components/Rightbar/Rightbar.css
+++ b/src/components/Rightbar/Rightbar.css
@@ -81,10 +81,13 @@
 .rightbarFollowings {
   display: flex;
   flex-wrap: wrap;
-  justify-content: in-between;
+  margin-right : 10px;
+  justify-content: left;
 }
 .rightbarFollowing {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   margin-bottom: 20px;
   cursor: pointer;
@@ -92,6 +95,7 @@
 .rightbarFollowingImg {
   width: 100px;
   height: 100px;
+  margin-right: 30px;
   object-fit: cover;
   border-radius: 5px;
 }
@@ -110,4 +114,28 @@
 }
 .rightbarFollowButton:focus{
   outline: none;
+}
+.rightbarNewFriendImg{
+  height: 60px;
+  width: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.rightbarNewFriend{
+  display: flex;
+  margin-bottom: 20px;
+  flex-direction: row;
+}
+.rightbarNewFriendName{
+  margin-left: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: black;
+}
+.rightbarFollowingName{
+  color: black;
+  margin-right: 30px;
+  margin-top: 5px;
 }
