--- a/src/components/Friends/Friends.css
+++ b/src/components/Friends/Friends.css
@@ -1,4 +1,4 @@
-.sidebarFriend {
+/* .sidebarFriend {
     display: flex;
     align-items: center;
     margin-bottom: 15px;
@@ -10,4 +10,4 @@
     border-radius: 50%;
     object-fit: cover;
     margin-right: 10px;
-  }
+  } */
