--- a/src/components/Online/Online.css
+++ b/src/components/Online/Online.css
@@ -1,4 +1,4 @@
-.rightbarFriend {
+/* .rightbarFriend {
     display: flex;
     align-items: center;
     margin-bottom: 15px;
@@ -29,4 +29,4 @@
   
   .rightbarUsername{
       font-weight: 500;
-  }
+  } */
