--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -82,3 +82,11 @@
       font-weight: 500;
       cursor: pointer;
   }
+  .alertContainer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999; /* Ensure it's above other elements */
+  }
+  
